// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unsupported block content: deletes selected node 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`unsupported block content: types over selected node 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "A",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`unsupported inline content: deletes selected node 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`unsupported inline content: types over selected node 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "A",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
